<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.ContactFragment">


        <TextView
            android:id="@+id/aboutApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/aboutApp"
            android:textSize="30sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />


    <TextView
        android:id="@+id/aboutAppDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/aboutAppDetail"
        android:textSize="22dp"
        android:gravity="center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <TextView
        android:id="@+id/aboutAppTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/aboutAppTitle"
        android:textSize="22dp"
        android:textStyle="bold"
        android:gravity="center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/aboutAppMemberTarik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/memberTarik"
        android:textSize="18dp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/aboutAppMemberWilfrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/memberWilfrid"
        android:textSize="18dp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/aboutAppMemberShiraz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/memberShiraz"
        android:textSize="18dp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/aboutAppMemberMauro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/memberMauro"
        android:textSize="18dp"
        android:gravity="center_horizontal" />


</LinearLayout>