<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ProfileActivity">

    <!--<ImageView
        android:layout_height="200dp"
        android:layout_width="200dp"
        android:id="@+id/iv"
        android:src="@drawable/iandriod"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Camera"
            android:id="@+id/camera"
            android:onClick="camera" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gallery"
            android:id="@+id/gallery"
            android:onClick="gallery"/>
    </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/primaryColor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="8">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_image_bg"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@color/primaryTextColor"
                app:cardCornerRadius="25dp"
                app:cardElevation="8dp"
                app:cardMaxElevation="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--<cn.gavinliu.android.lib.shapedimageview.ShapedImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/brian"
                        app:shape_mode="round_rect" />-->

                    <!-- Image here -->
                    <ImageView
                        android:id="@+id/iv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/iandriod" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <!-- Buttons here -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="0.8">

            <Button
                android:id="@+id/camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="camera"
                android:text="Camera" />

            <Button
                android:id="@+id/gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="gallery"
                android:text="Gallery" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_weight="5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:weightSum="10">

                <TextView
                    android:id="@+id/TV_display_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/profile_name"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="34sp" />

                <TextView
                    android:id="@+id/TV_display_track"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/profile_track"
                    android:textAllCaps="false"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">


                </LinearLayout>

                <TextView
                    android:id="@+id/TV_display_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/display_email"
                    android:textAllCaps="false" />

                <TextView
                    android:id="@+id/TV_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/profile_email"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="18sp" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/email_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/mail" />

</androidx.constraintlayout.widget.ConstraintLayout>
